# fusion

./: .gitignore  Cargo.toml  README.md
migrations/: 20240524212758_create_dests_and_sources.down.sql  20240524212758_create_dests_and_sources.up.sql  20240526214314_add_fields_for_auth.down.sql  20240526214314_add_fields_for_auth.up.sql  20240609133123_destinations_auth_tokens.down.sql  20240609133123_destinations_auth_tokens.up.sql  20240720184606_add_auth_type_param_type.down.sql  20240720184606_add_auth_type_param_type.up.sql  20240720184607_add_auth_type_param.down.sql  20240720184607_add_auth_type_param.up.sql  20240723061142_add_source_max_timeout.down.sql  20240723061142_add_source_max_timeout.up.sql  20240723195203_add_source_body.down.sql  20240723195203_add_source_body.up.sql  20240725205641_config_version_table.down.sql  20240725205641_config_version_table.up.sql  20240731230020_auth_token_hash.down.sql  20240731230020_auth_token_hash.up.sql  20240801190228_extra_param_types.down.sql  20240801190228_extra_param_types.up.sql  20240801220521_extra_param_types_cols.down.sql  20240801220521_extra_param_types_cols.up.sql  20240804031559_add_source_fallback.down.sql  20240804031559_add_source_fallback.up.sql  20240816015944_initial_database_creation.down.sql  20240816015944_initial_database_creation.up.sql
src/: main.rs
src/api/: bindings.rs  error.rs  fusion_config.rs  mod.rs  response.rs
src/config/: config_file.rs  error.rs  mod.rs  yaml_parser.rs
src/data/: error.rs  mod.rs  queryable.rs
src/data/models/: auth_token.rs  (+4 more)
src/utils/: hasher.rs  mod.rs
(+5 files in other folders)
