[package]
name = "fusion"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
thiserror = "1.0.60"
dotenv = "0.15.0"
serde = "1.0.201"
serde_json = { version = "1.0.117", features = ["raw_value"] }
rocket = { version = "0.5.0", features = ["json"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-async-std"] }
reqwest = { version = "0.12.4", features = ["json"] }
regex = "1.10.4"