[package]
name = "fusion"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
rand = "0.8.5"
thiserror = "1.0.60"
dotenv = "0.15.0"
serde = "1.0.201"
serde_json = { version = "1.0.117", features = ["raw_value"] }
axum = { version = "0.7.5", features = ["json"]}
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "chrono"] }
reqwest = { version = "0.12.4", features = ["json"] }
regex = "1.10.4"
jq-rs = "0.4.1"
tokio = { version = "1.37.0", features = ["full"]}
http = "1.1.0"
serde_yaml = { version = "0.9.34" }
sha2 = "0.10.8"